--- a/JS/JSCore/lesson11/index.html
+++ b/JS/JSCore/lesson11/index.html
@@ -10,7 +10,60 @@
 </head>
 
 <body>    
+  <div class="section">
+    <div class="current">
+        <div class="current__date"></div>
+        <div class="current__time"></div>
+    </div>
+</div>
 
+<div class="section">
+    <div class="stopwatch">
+
+        <div class="stopwatch__display">
+            <div class="stopwatch__display--dights">
+                00:00:00:000
+            </div>
+            <div class="stopwatch__display--buttons">
+                <div class="btn" data-btn="start">start</div>
+                <div class="btn" data-btn="lap">lap</div>
+                <div class="btn" data-btn="stop">stop</div>
+                <div class="btn" data-btn="reset">reset</div>
+            </div>
+        </div>
+
+        <div class="stopwatch__laps">
+            <ul class="stopwatch__laps--list"></ul>
+        </div>
+
+    </div>
+</div>
+<div class="section">
+
+    <div class="timer__set">
+        <div class="timer__set--display">
+            <div class="timer__set--display_dights">
+                25
+            </div>
+            <div class="timer__set--display_mark">
+                minutes
+            </div>
+        </div>
+        <div class="timer__set--buttons">
+            <div class="btn" data-btn="add">+</div>
+            <div class="btn" data-btn="subtract">-</div>
+        </div>
+    </div>
+
+    <div class="timer__countdown">
+        <div class="timer__countdown--display">00:00</div>
+        <div class="timer__countdown--buttons">
+            <div class="btn" data-btn="start_timer">start</div>
+            <div class="btn" data-btn="stop_timer">stop</div>
+            <div class="btn" data-btn="reset_timer">reset</div>
+        </div>
+    </div>
+</div>
 
 
   <script src="script.js"></script>
